network_module/src/main/java/com/example/network_module/error/Status.kt
package com.example.network_module.error

enum class Status {
   SUCCESS,
   ERROR,
   LOADING
}